# Reverse-Abduction-Simulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.toml  run.sh  save  vcpkg.json
ReverseAbductionSimulator/: ReverseAbductionSimulator
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night/: themes.xml
lib/glad/: CMakeLists.txt
res/ShaderData/: ES_screen.frag  ES_screen.vert  ES_sprite.frag  ES_sprite.vert  glyph.frag  sprite.frag
src/: CMakeLists.txt  Constants.h  Core.h  Outrospection.cpp  Outrospection.h  Platform.h  Source.cpp  Timer.cpp  Timer.h  Types.h  Util.cpp  Util.h
src/Core/: AudioManager.cpp  AudioManager.h  File.cpp  File.h  LayerStack.h  Resource.cpp  Resource.h
src/Core/Rendering/: Framebuffer.cpp  Framebuffer.h  FreeType.h  OpenGL.h  Resource.cpp  Shader.cpp  Shader.h  SimpleTexture.h  TextureManager.cpp  TextureManager.h  TickableTexture.cpp  TickableTexture.h
src/Core/UI/: Bounds.cpp  Bounds.h  GUIBackground.cpp  GUIBackground.h  GUICharacterMaker.cpp  GUICharacterMaker.h  GUILayer.cpp  GUILayer.h  GUIOctopusOverlay.h  GUIPeople.cpp  GUIPeople.h  GUIPostGame.cpp  GUIPostGame.h  GUIScene.cpp  GUIStats.cpp  GUIStats.h  GUITutorial.cpp  GUITutorial.h  UIButton.cpp  UIButton.h  UIComponent.cpp  UIComponent.h  UIHuman.cpp  UIHuman.h
